[package]
name = "sn_consensus"
version = "3.4.0"
description = "Safe Network Membership: Enables nodes to dynamically join and leave a section"
authors = ["David Rusu <davidrusu.me@gmail.com>"]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/sn_consensus"
edition = "2021"

[dependencies]
rand = "0.8"
bincode = "1.2.1"
thiserror = "1.0"
log = "0.4.13"
tiny-keccak = "2.0.2"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.blsttc]
version = "8.0"

[profile.test]
opt-level = 3
debug = true
overflow-checks = true

[profile.bench]
debug = true

[profile.release]
debug = true

[dev-dependencies]
eyre = "0.6.5"
quickcheck = "1"
quickcheck_macros = "1"
env_logger = "0.9"
